# validator-ai

./: .env.example  .gitignore  Dockerfile  README.md  app.py  cost_analysis_2026.md  docker-compose.yml  project_documentation.md  pyproject.toml
.agent/rules/: run-python-file.md
.agent/workflows/: commit.md
frontend/: .env.example  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: AuthModal.tsx  FloatingOrbs.tsx
frontend/src/data/: free_report.json  standard_report.json
idea-validator-pro/: index.html
idea-validator-pro/src/: App.tsx
src/agents/: __init__.py  base.py  basic_tier.py  compiler.py  free_tier.py  interviewer.py  parallel_executor.py  quality_checker.py  researcher.py  standard_modules.py
src/api/: __init__.py  middleware.py  routes.py  server.py
src/config/: __init__.py  constants.py  constants_pricing.py  prompts.py  settings.py  warnings.py
src/graph/: __init__.py  workflow.py
src/models/: __init__.py  inputs.py  outputs.py
src/templates/: __init__.py  report.html
src/utils/: __init__.py  currency.py  date_utils.py  health_monitor.py  scoring.py  webhook.py
tests/: conftest.py  e2e_scoring_test.py  test_agents.py  test_api.py  test_currency.py  test_custom_tier.py  test_custom_workflow.py  test_logic_enhancements.py  test_model_config.py  test_models.py  test_persistence_upgrade.py  test_scoring.py  test_tavily.py  test_workflow.py  verify_context_refinement.py  verify_dynamic_queries.py  verify_refactor.py  verify_research_tiers.py  verify_search_optimization.py  verify_search_retry.py
(+20 files in other folders)
